[package]
name = "vaultsyn"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
aes-gcm = "0.10"
base64 = "0.21"
sha2 = "0.10"
directories = "5.0"
