[package]
name = "vaultsyn"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
url = "2.4"
rand = "0.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.21"
sha2 = "0.10"
directories = "5.0"
crossterm = "0.27"
rustyline = "13.0"
chrono = { version = "0.4", features = ["serde"] }
